# bonsoir_dns_sd

./: README.md  pubspec.yaml
example/: pubspec.yaml
example/linux/: CMakeLists.txt  my_application.cc
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.aps  Runner.rc
lib/: bonsoir_dns_sd.dart
test/: bonsoir_dns_sd_test.dart
windows/: CMakeLists.txt  bonsoir_dns_sd_plugin.cpp  constants.h  plugin.cpp  plugin.hpp  service.cpp  utils.cpp  utils.hpp
windows/actions/: action.cpp  action.hpp  broadcast.cpp  broadcast.hpp  discovery.cpp  discovery.hpp
windows/cmake/: FindBonjour.cmake
windows/include/bonsoir_dns_sd/: bonsoir_dns_sd_plugin.h
windows/service/: service.cpp  service.hpp
